Remove Java 11 API
Signed-off-by: Ryan Nett <JNett96@gmail.com>